# serializer version: 1
# name: test_image_setup_and_states[image.indi_allsky_latest_keogram-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.indi_allsky_latest_keogram',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Latest keogram',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Latest keogram',
    'platform': 'indi_allsky',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'latest_keogram',
    'unique_id': '1234567890abcdef1234567890abcdef_latest_keogram',
    'unit_of_measurement': None,
  })
# ---
# name: test_image_setup_and_states[image.indi_allsky_latest_keogram-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ImageEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.indi_allsky_latest_keogram?token=1caab5c3b3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'INDI Allsky Latest keogram',
    }),
    'context': <ANY>,
    'entity_id': 'image.indi_allsky_latest_keogram',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_image_setup_and_states[image.indi_allsky_latest_star_trail-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.indi_allsky_latest_star_trail',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Latest star trail',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Latest star trail',
    'platform': 'indi_allsky',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'latest_startrail',
    'unique_id': '1234567890abcdef1234567890abcdef_latest_startrail',
    'unit_of_measurement': None,
  })
# ---
# name: test_image_setup_and_states[image.indi_allsky_latest_star_trail-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ImageEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.indi_allsky_latest_star_trail?token=1caab5c3b3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'INDI Allsky Latest star trail',
    }),
    'context': <ANY>,
    'entity_id': 'image.indi_allsky_latest_star_trail',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
